# ChangeLog for x11-libs/cairo
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/cairo/ChangeLog,v 1.100 2007/02/18 10:32:33 grobian Exp $

  18 Feb 2007; Fabian Groffen <grobian@gentoo.org> cairo-1.0.2.ebuild,
  cairo-1.0.4.ebuild, cairo-1.0.4-r1.ebuild, cairo-1.2.4.ebuild,
  cairo-1.2.6.ebuild, cairo-1.3.10.ebuild, cairo-1.3.12.ebuild:
  Dropped ppc-macos keyword, see you in prefix

*cairo-1.3.12 (20 Jan 2007)

  20 Jan 2007; Doug Goldstein <cardoe@gentoo.org> +cairo-1.3.12.ebuild:
  new snapshot rev bump

  07 Jan 2007; Doug Goldstein <cardoe@gentoo.org> cairo-1.2.6.ebuild,
  cairo-1.3.10.ebuild:
  Removing debug for gcov since lcov is not in the tree

  05 Jan 2007; Saleem Abdulrasool <compnerd@gentoo.org> ChangeLog:
  Fixing debug paths

  05 Jan 2007; Diego Pettenò <flameeyes@gentoo.org> cairo-1.2.6.ebuild,
  cairo-1.3.10.ebuild:
  Remove debug.eclass usage.

  03 Jan 2007; Roy Marples <uberlord@gentoo.org> cairo-1.3.10.ebuild:
  Run elibtoolize so that we get correct .so versioning on FreeBSD

  31 Dec 2006; Doug Goldstein <cardoe@gentoo.org> cairo-1.2.6.ebuild:
  Remove useless post install msg and remove unused IUSE flag

*cairo-1.3.10 (31 Dec 2006)

  31 Dec 2006; Doug Goldstein <cardoe@gentoo.org> +cairo-1.3.10.ebuild:
  Adding cairo 1.3 snapshot. Including xcb via xcb USE flag

  07 Dec 2006; Doug Goldstein <cardoe@gentoo.org> cairo-1.2.4.ebuild,
  cairo-1.2.6.ebuild, -cairo-1.2.2.ebuild:
  Removing pdf USE flag since it doesn't have any depends anymore and Andrea
  Barisani <lcars@gentoo.org> is nagging me in email. (Even though he doesn't
  help me with LDAP.. but I help him with this..)

  01 Dec 2006; Gustavo Zacarias <gustavoz@gentoo.org> cairo-1.2.4.ebuild:
  Stable on hppa wrt #155544

  25 Nov 2006; Bryan Østergaard <kloeri@gentoo.org> cairo-1.2.4.ebuild:
  Stable on Alpha + ia64.

  24 Nov 2006; Markus Rothe <corsair@gentoo.org> cairo-1.2.4.ebuild:
  Stable on ppc64; bug #155544
