@@ -1,0 +1,3 @@
+MD5 08eef0800258bff5b3f13d787dd68402 cairo-1.3.14.tar.gz 2831683
+RMD160 f1d859b851077fcbe0d735fba4770f84cd84a464 cairo-1.3.14.tar.gz 2831683
+SHA256 752918a5519a67a8ce05a740574116a26d98a44a37beba075f03b547903d3ff0 cairo-1.3.14.tar.gz 2831683
