@@ -1,6 +1,11 @@
 # ChangeLog for x11-libs/cairo
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/cairo/ChangeLog,v 1.100 2007/02/18 10:32:33 grobian Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/cairo/ChangeLog,v 1.101 2007/02/19 05:54:06 cardoe Exp $
+
+*cairo-1.3.14 (19 Feb 2007)
+
+  19 Feb 2007; <cardoe@gentoo.org> +cairo-1.3.14.ebuild:
+  rev bump
 
   18 Feb 2007; Fabian Groffen <grobian@gentoo.org> cairo-1.0.2.ebuild,
   cairo-1.0.4.ebuild, cairo-1.0.4-r1.ebuild, cairo-1.2.4.ebuild,
